test(qa): put gateway behind reverse proxy as integration test